Correçoes de bugs e erros